# PathReferencePointCalculator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/CarState/: CarState.h
include/CarStateDataProvider/: AbstractCarStateDataProvider.h  TextCarStateDataProvider.h
include/CrossingPointCalculator/: CrossingPointCalculatorInterface.h  PerpendicularLinesCrossingPointCalculator.h
include/Line/: Line.h
include/NearestPathPointFinder/: NearestPathPointFinderInterface.h  SimpleNearestPathPointFinder.h
include/PathDataProvider/: AbstractPathDataProvider.h  TextPathDataProvider.h
include/PathPoint/: PathPoint.h
include/PathPointFinder/: GuidingPathPointFinder.h  PathPointFinderInterface.h
include/PathReferencePointCalculator/: PathReferncePointCalculator.h
src/CarStateDataProvider/: AbstractCarStateDataProvider.cpp  TextCarStateDataProvider.cpp
src/CrossingPointCalculator/: PerpendicularLinesCrossingPointCalculator.cpp
src/NearestPathPointFinder/: GuidingPathPointFinder.cpp  SimpleNearestPathPointFinder.cpp
src/PathDataProvider/: AbstractPathDataProvider.cpp  TextPathDataProvider.cpp
src/PathPointFinder/: GuidingPathPointFinder.cpp
src/PathReferencePointCalculator/: PathReferencePointCalculator.cpp
test/: CMakeLists.txt  CarStateDataProviderTest.cpp  CrossingPointCalculatorTest.cpp  CrossingPointCalculatorTest.h  NearestPathPointFinderTest.cpp  NearestPointFinderEightTest.cpp  NearestPointFinderTest.cpp  NearestPointFinderTest.h  NearestPointFinderTurnTest.cpp  PathDataProviderTest.cpp  PathPointFinderEightTest.cpp  PathPointFinderTest.cpp  PathPointFinderTest.h  PathPointFinderTurnTest.cpp  PathReferencePointCalculatorTest.cpp  TurnPathVisualization.cpp  Visualization.cpp
test-data/Angle/: Angle.ods  CarStateData  Path
test-data/BasicTurn/: .~lock.Turn.ods#  CarStateData  Path  Turn.ods
test-data/Circle/: CarStateData  Circle.ods  Path
test-data/EightCurve/: .~lock.EightCurve.ods#  CarStateData  EightCurve.ods  Path
test-data/HorizontalLine/: CarStateData  HorizontalLine.ods  Path
test-data/Turn/: CarStateData
test-data/VerticalLine/: CarStateData  Path  VericalLine.ods
test=data/: .~lock.Turn.ods#
test_data/BasicTurn/: Path
